# spaceclaim_API

./: #IDXHDR  #STRINGS  #SYSTEM  #TOCIDX  #TOPICS  #URLSTR  #URLTBL  #WINDOWS  $FIftiMain  .gitignore  API_Scripting_Class_Library.hhc  API_Scripting_Class_Library.hhk  README.md  main.py  pyproject.toml  script.py  test.py  test_2.py  test_3.py
$WWKeywordLinks/: BTree  Data  Map
Styles/: branding.css
html/: F_SpaceClaim_Api_V15_Scripting_Commands_CommandOpts_CurveGapsOptions_DefaultDistance.htm  F_SpaceClaim_Api_V15_Scripting_Commands_CommandOpts_ShortEdgesOptions_DefaultMaxEdgeLength.htm  F_SpaceClaim_Api_V15_Scripting_Commands_FillOptions_Default.htm  F_SpaceClaim_Api_V15_Scripting_PowerSelection_PowerSelection_AllSelections.htm  F_SpaceClaim_Api_V15_Scripting_PowerSelection_PowerSelection_CurrentSelectionIter.htm  F_SpaceClaim_Api_V15_Scripting_PowerSelection_PowerSelection_FilteredSelection.htm  Fields_T_SpaceClaim_Api_V15_Scripting_Commands_CommandOpts_CurveGapsOptions.htm  Fields_T_SpaceClaim_Api_V15_Scripting_Commands_CommandOpts_ShortEdgesOptions.htm  Fields_T_SpaceClaim_Api_V15_Scripting_Commands_FillOptions.htm  Fields_T_SpaceClaim_Api_V15_Scripting_PowerSelection_PowerSelection.htm  M_SpaceClaim_Api_V15_Scripting_Commands_BlockBody_Create.htm  M_SpaceClaim_Api_V15_Scripting_Commands_CircularSurface_Create.htm  M_SpaceClaim_Api_V15_Scripting_Commands_ClosestPoint_Get.htm  M_SpaceClaim_Api_V15_Scripting_Commands_ClosestPoint_Get_1.htm  M_SpaceClaim_Api_V15_Scripting_Commands_ClosestPoint_Get_2.htm  M_SpaceClaim_Api_V15_Scripting_Commands_Combine_Intersect.htm  (+877 more)
(+15 files in other folders)
